--- a/two/style.css
+++ b/two/style.css
@@ -4,8 +4,9 @@ body{
     padding: 0;
     margin: 0;
     background-color: aqua;
-    text-align: center;
     font-family: Raleway;
+    position: relative;
+    left: 50px;
 }
 
 h1#title{
@@ -21,6 +22,8 @@ p#description{
 form{
     padding: 10px;
     display: block;
+    position: relative;
+    right: 100;
 }
 
 input#name-label{
